--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Traversy Launcher",
-  "description": "Quick launch Traversy Media",
+  "name": "Roblox Ultra",
+  "description": "Multiple features",
   "version": "1.0.0",
   "icons": { "128": "icon_128.png" },
   "browser_action": {
