--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "name": "Roblox Ultra",
   "description": "Multiple features",
   "version": "1.0.0",
-  "icons": { "128": "icon_128.png" },
+  "icons": { "128": "icon2.png" },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon2.png",
     "default_popup": "popup.html"
   },
   "permissions": ["activeTab"]
